Mejorado mis redes sociales en especifico los iconos

--- a/styles/generalStyle.css
+++ b/styles/generalStyle.css
@@ -1403,5 +1403,10 @@ body{
         cursor: pointer;
     }
 
+    /* estilos darkmode */
 
+    .darkmode .header{
+        /*outline: 2px solid blue;*/
+        border-bottom: 1px solid #ddd;
+    }
 }
