--- a/styles/generalStyle.css
+++ b/styles/generalStyle.css
@@ -1221,17 +1221,22 @@ body{
 
     .main-carousel{
         /*outline: 4px solid red;*/
+        display: flex;
+        width: 100%;
+        height: 32em;
         background-color: #fff;
-        margin: 2em 0 5em 0;
+        margin: 2em 0 7em 0;
         padding: 0;
     }
 
     .slides{
         /*outline: 2px solid blue;*/
         width: 100%;
+        height: auto;
         margin: 0 auto;
         padding: 2em 0;
-        background-image: url("../img/backAsideImage.jpg");
+        /*background-image: url("../img/backAsideImage.jpg");*/
+        background-image: url("../img/backImagePrueba.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center top;
