--- a/styles/generalStyle.css
+++ b/styles/generalStyle.css
@@ -547,6 +547,44 @@ body{
     border-radius: 1em;
 }
 
+/* ESTILOS PARA EL LOS ARTICLE REVIEWS */
+
+.article-card{
+    outline: 2px solid blue;
+    display: grid;
+    width: 17em;
+    height: auto;
+    margin: 3em auto;
+    background-color: rgba(0, 0, 0, 0.13);
+    border-radius: 1em 1em 1em 1em;
+    /*overflow: hidden;*/
+}
+
+.article-card__img{
+    display: block;
+    width: 100%; 
+    height: auto;
+    border-radius: 1em 1em 0 0;
+    box-shadow: 1px 2px 7px rgba(0, 0, 0, 0.65);
+}
+
+.info-card{
+    outline: 2px solid red;
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.info-card__title{
+    outline: 2px solid black;
+    font-size: 1.3em;
+    line-height: 1.4em;
+    padding: 0.2em 0.2em 0.5em 0.5em;
+    margin: 0;
+    color: steelblue;
+}
+
 /* *********************** ESTILOS PARA EL ASIDE EN MOBILES ***********************  */
 
 .aside{
