--- a/styles/generalStyle.css
+++ b/styles/generalStyle.css
@@ -579,7 +579,7 @@ body{
     justify-content: center;
     align-items: center;
     margin: 0;
-    padding: 0;
+    padding: 0.25em 0.3em;
 }
 
 .info-autor__img{
@@ -709,6 +709,11 @@ body{
 .codes--bigDevice{
     width: 50%;
 }
+
+/* estilos para los codigos que esta dentro del aside como imagen */
+
+
+
 
 /* ********************** ESTILOS PARA EL FOOTER EN MOBILES *********************** */ 
 
@@ -1122,7 +1127,7 @@ body{
 
     .blog-info__title{
         /*outline: 2px solid red;*/
-        background-color: rgba(0, 0, 0, 0.65);
+        /*background-color: rgba(0, 0, 0, 0.65);*/
         padding: 0.25em;
     }
 
@@ -1163,10 +1168,15 @@ body{
     }
 
     .modal-box{
-        display: block;
+        /*outline: 2px solid purple;*/
         width: 30em; /* 480 px*/ 
         margin: 1em auto;
         padding: 0;
+    }
+
+    .modal-box__img{
+        /*outline: 2px solid red;*/
+        padding: 2em;
     }
 
     .modal-box__close{
@@ -1206,7 +1216,7 @@ body{
     /* ***************************** ESTILOS PARA EL NAV EN LAPTOPS Y COMPUTADORAS ***************************** */
 
     .main-menu{
-        outline: 2px solid blue;
+        /*outline: 2px solid blue;*/
         position: fixed;
         display: block; 
         top: 0.85em;
@@ -1471,7 +1481,7 @@ body{
     /* ***************************** ESTILOS PARA EL ASIDE EN LAPTOPS Y COMPUTADORAS ***************************** */
 
     .aside{
-        /*outline: 2px solid blue;*/
+        /*outline: 2px solid red;*/
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
@@ -1482,9 +1492,9 @@ body{
         background-size: cover;
         background-position: center center;
         background-attachment: fixed;
-        margin: 0 0 7em 0;
+        margin: 0 0 10em 0;
         width: 100%;
-        height: 40em;
+        height: auto;
     }
 
     .aside-info{
@@ -1502,6 +1512,28 @@ body{
     .font-bold--aside{
         color: steelblue;
         font-weight: 700;
+    }
+
+    /* estilos para los codigos que esta dentro del aside como imagen */
+
+    .main-codes{
+        /*outline: 2px solid blue;*/
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .codes-img-aside{
+        /*outline: 4px solid red;*/
+        padding: 3em;
+        margin: 0;
+    }
+
+    .codes-img-aside img{
+        width: 90%;
+        height: auto;
+        margin: 0;
     }
 
     /* ********************** ESTILOS PARA EL FOOTER EN LAPTOPS Y COMPUTADORAS ********************** */
