--- a/styles/generalStyle.css
+++ b/styles/generalStyle.css
@@ -645,11 +645,18 @@ body{
 }
 
 .aside-info{
+    /*outline: 2px solid red;*/
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(4, auto);
     background-color: var(--backColorAsideInfo);
     margin: 0 0 3em 0;
 }
 
 .aside-info__title{
+    /*outline: 2px solid purple;*/
+    grid-column: 1;
+    grid-row: 1;
     display: block;
     width: 100%;
     height: auto;
@@ -663,37 +670,49 @@ body{
 }
 
 .aside-info__img{
+    /*outline: 2px solid purple;*/
+    grid-column: 1;
+    grid-row: 2;
     display: block;
     width: var(--widthAsideInfoImg);
     height: var(--heightAsideInfoImg);
     margin: 1em auto;
-}
-
-.aside-info__link{
-    font-size: var(--size_asideInfoLink);
-    text-decoration: none;
-    animation: changeColorInfinite 1.5s alternate ease-in-out infinite;
-}
-
-@keyframes changeColorInfinite{
-    from{
-        color: rgba(255, 0, 0, 0.75);
-        font-weight: 800;
-    }
-    to{
-        color: #eee;
-    }
-}
-
-.aside-info__link::before{
-    content: "►";
-    margin: 0 0 0 0.15em;
+    padding: 0;
 }
 
 .paragraph--aside{
+    /*outline: 2px solid green;*/
+    grid-column: 1;
+    grid-row: 3;
     font-size: var(--size_paragraphAside);
     padding: 1em;
 }
+
+.button-go{
+    /*outline: 2px solid blue;*/
+    grid-column: 1;
+    grid-row: 4;
+    display: block;
+    width: 50%;
+    padding: 0;
+    margin: 0 auto 1em auto;
+    border: 2px solid rgba(42, 42, 42, 0.53);
+    background-color: rgba(58, 144, 225, 1);
+    border-radius: 1em;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.35);
+}
+
+.button-go a{
+    /*outline: 2px solid blue;*/
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    font-size: 1.25em;
+    line-height: 2em;
+    color: #fff;
+    font-family: var(--fontFamilyFooterEnlaces);
+}
+
 
 /* esta clase me permite dar estilos a las imagen de codigos que tenga (carbon) */
 
@@ -847,7 +866,7 @@ body{
     bottom: 4.5em;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
     width: 90%;
     height: auto;
     margin: 1em;
@@ -863,48 +882,63 @@ body{
     font-size: var(--size_h6);
     text-align: center;
     margin: 0;
-    padding: 0.5em 0.5em 0 0;
+    padding: 0.25em 0 0 0;
 }
 
 .modal-box__img{
     /*outline: 2px solid green;*/
     grid-column: 1;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     display: block;
     width: 100%; 
     height: 100%;
     margin: 0 auto;
+    padding: 0.5em;
 }
 
 .modal-box__desc{
     /*outline: 2px solid purple;*/
     grid-column: 2;
     grid-row: 2;
+    display: block;
+    width: 100%;
     color: var(--colorDDD);
     line-height: 1.6em;
     font-size: 0.95em;
-    padding: 0.30em 0.8em;
+    padding: 0.25em 0.25em 0.25em 0.7em;
     margin: 0;
 }
 
-.modal-box__link{
-    color: var(--color_steelblue);
-    text-decoration: none;
-    font-size: 1.15em;
+.modal-box__button{
+    /*outline: 2px solid red;*/
+    grid-column: 2;
+    grid-row: 3;
+    display: block;
+    width: 90%;
+    padding: 0.15em 0;
+    margin: 0.3em auto 0.65em auto;
+    border: 2px solid #222;
+    background-color: rgba(0, 187, 45, 0.85);
+    border-radius: 0.5em;
 }
 
-.modal-box__link::after{
-    content: "►";
-    margin-left: 0.5em;
+.modal-box__link{
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    font-size: calc(var(--size_a) - 0.05em)
 }
+
 
 .modal-box__close{
     /*outline: 2px solid blue;*/
     position: absolute;
     top: 0;
     right: 0.25em;
-    color: var(--colorDDD);
-    font-size: 1.45em;
+    /*color: var(--colorDDD);*/
+    color: var(--color_steelblue);
+    font-size: 1.55em;
     margin: 0;
     padding: 0;
 }
@@ -1174,6 +1208,14 @@ body{
         padding: 0;
     }
 
+    .modal-box__title{
+        /*outline: 2px solid blue;*/
+        display: block;
+        width: 100%;
+        margin: 0;
+        padding: 0.75em 0.5em 0 0;
+    }
+
     .modal-box__img{
         /*outline: 2px solid red;*/
         padding: 2em;
@@ -1196,8 +1238,7 @@ body{
 
 @media screen and (min-width: 1024px){
 
-    /* ***************************** ESTILOS PARA EL HEADER EN LAPTOPS Y COMPUTADORAS 
-    ***************************** */
+    /* ************************ ESTILOS PARA EL HEADER EN LAPTOPS Y COMPUTADORAS *************************** */
 
     .header{
         justify-content: flex-start;
@@ -1502,11 +1543,21 @@ body{
         max-width: 25em;
         margin: 1em;
         padding: 0;
-        background-color: rgba(0, 0, 0, 0.78);
+        background-color: rgba(0, 0, 0, 0.89);
     }
    
     .paragraph--aside{
         color: var(--color_white);
+    }
+
+    .button-go:hover{
+        /*outline: 2px solid red;*/
+        transition: all .4s;
+        background-color: rgb(7, 131, 247);
+    }
+
+    .button-go:active{
+        transform: scale(0.95);
     }
 
     .font-bold--aside{
@@ -1574,6 +1625,11 @@ body{
 
     .main-modal{
         padding: 30em 0 0 0;
+    }
+
+    .modal-box__button:hover{
+        background-color: rgb(7, 226, 58, 1);
+        font-weight: 600;
     }
 
     .modal-box__close{
