--- a/styles/generalStyle.css
+++ b/styles/generalStyle.css
@@ -134,16 +134,16 @@ body{
 /* *********************** ESTILOS PARA EL NAV EN MOBILES *********************** */
 
 .main-menu{
-    /*outline: 2px solid seagreen;*/
+    /*outline: 2px solid red;*/
     position: fixed;
     display: block;
-    top: 0;
+    top: -7px;
     width: 100%;
     height: 2.9em;
     margin: 4.65em 0 0 0;
     padding: 0;
     background-color: var(--backColorMenuGeneral);
-    z-index: 20;
+    z-index: 35;
 }
 
 .main-menu__switch{
@@ -731,8 +731,17 @@ body{
 
 /* estilos para los codigos que esta dentro del aside como imagen */
 
+.codes-img-aside{
+    /*outline: 2px solid blue;*/
+    margin: 1em 0;
+}
 
-
+.codes-aside{
+    /*outline: 2px solid blue;*/
+    display: flex;
+    width: 100%;
+    height: auto;
+}
 
 /* ********************** ESTILOS PARA EL FOOTER EN MOBILES *********************** */ 
 
@@ -1579,7 +1588,7 @@ body{
         margin: 0;
     }
 
-    .codes-img-aside img{
+    .codes-aside{
         width: 90%;
         height: auto;
         margin: 0;
