--- a/styles/generalStyle.css
+++ b/styles/generalStyle.css
@@ -1119,6 +1119,14 @@ body{
         }
     }
 
+    /* ************* ESTILOS PARA EL BOTON DARK MODE ************* */
+
+    .btn_dark_mode{
+        /*outline: 2px solid red;*/
+        top: 11.3em;
+        right: 1.25em;
+    }
+
     /* ***************************** ESTILOS PARA EL NAV EN TABLETS ***************************** */
 
     .main-menu{
@@ -1126,26 +1134,46 @@ body{
     }
 
     .menu-principal{
-        width: 22.5em;
-        animation: left_right_menu 1.25s alternate;
+        /*outline: 2px solid blue;*/
+        top: 2.93em;
+        display: none;
+        flex-flow: row nowrap;
+        justify-content: space-around;
+        width: 100%;
+        height: 3em;
+        margin: 0;
+        padding: 0;
+        animation: left_right_menu .5s alternate ease;
     }
 
     @keyframes left_right_menu{
         from{
-            left: -23em;
+            /*left: -23em;*/
+            transform: scale(0.2);
         }
         to{
-            left: 0;
+            /*left: 0;*/
+            transform: scale(1);
         }
+    }
+
+    .menu-principal__item{
+        margin: 0;
     }
 
     .menu-principal__link{
         font-size: 1.25em;
         padding: 0 0 0 2em;
+        margin: 0;
     }
 
     /* ***************************** ESTILOS PARA EL SECTION EN TABLETS ***************************** */
 
+    /* estilos para el div main-content */
+
+    .main-content{
+        padding-top: 12em;
+    }
 
     .codes{
         /*outline: 2px solid blue;*/
